fully integrate allen nlp predict model; refine ui; fix double scrollbar

--- a/frame/src/components/App/App.scss
+++ b/frame/src/components/App/App.scss
@@ -19,6 +19,7 @@ body {
 .ant-layout {
   height: 100vh !important;
   min-height: 100vh !important;
+  overflow: hidden !important;
 }
 
 .footerNoteText {
